fixed legend keys so colours are visible also in print view.

--- a/peek.css
+++ b/peek.css
@@ -38,6 +38,7 @@
 	width: 15px;
 	height: 10px;
 	display: inline-block;
+  box-sizing:border-box;
 }
 .key-text {
 	padding-left: 5px;
